--- a/_i18n_xliff/UnitedPizzaHelper Localizations/vi.xcloc/Localized Contents/vi.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/vi.xcloc/Localized Contents/vi.xliff
@@ -568,8 +568,8 @@ Chạm bất kỳ đâu để đóng.</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.GachaMetaDBError.DatabaseExpired" xml:space="preserve">
-        <source>Local GachaMetaDB cache expired.</source>
-        <target state="translated">Bộ nhớ đệm GachaMetaDB cục bộ đã hết hạn.</target>
+        <source>Local GachaMetaDB cache expired. A possible reason is the failure of fetching the latest remote database. If you are situated in Mainland China without solid access to GitHub, please contact the developer regarding the situation of the outdated mirrors.</source>
+        <target state="translated">Bộ nhớ đệm GachaMetaDB cục bộ đã hết hạn. Nguyên nhân có thể là do không lấy được cơ sở dữ liệu từ xa mới nhất. Nếu bạn ở Trung Quốc đại lục mà không thể truy cập ổn định vào GitHub, hãy liên hệ với nhà phát triển để hỏi về tình trạng các máy chủ mirror đã lỗi thời.</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.GachaMetaDBError.EmptyFetchResult" xml:space="preserve">
@@ -1218,9 +1218,9 @@ Empty selection indicates selecting all profiles.</source>
         <target state="translated">Đã sửa xếp chồng (kể từ ★5 trước)</target>
         <note/>
       </trans-unit>
-      <trans-unit id="gachaKit.stats.standardItemHitRate" xml:space="preserve">
-        <source>Standard Hit Rate</source>
-        <target state="translated">Tỷ lệ Trúng Chuẩn</target>
+      <trans-unit id="gachaKit.stats.standardItemEvasionRate" xml:space="preserve">
+        <source>Standard Evasion Rate</source>
+        <target state="translated">Tỷ lệ Né Chuẩn</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.stats.totalPulls" xml:space="preserve">
@@ -1706,6 +1706,11 @@ Trình minh họa Biểu tượng Ứng dụng, The Pizza Helper (v5.0)</target>
         <target state="translated">Một số người đóng góp bản địa hóa trước đây</target>
         <note/>
       </trans-unit>
+      <trans-unit id="aboutKit.contributors.category.i18n.previous.description" xml:space="preserve">
+        <source>Not all of these contributors are taking part into the localization work since v5.0+. We still credit them here for their contributions against the previous major releases.</source>
+        <target state="translated">Không phải tất cả những người đóng góp này đều tham gia vào công việc bản địa hóa kể từ v5.0+. Chúng tôi vẫn ghi nhận họ ở đây vì những đóng góp của họ cho các bản phát hành lớn trước đó.</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="aboutKit.contributors.category.mainCrew" xml:space="preserve">
         <source>Main Developer Team</source>
         <target state="translated">Nhóm Phát Triển Chính</target>
@@ -1843,6 +1848,46 @@ Trình minh họa Biểu tượng Ứng dụng, The Pizza Helper (v5.0)</target>
       <trans-unit id="aboutKit.ourApps.pzHelper4HSR.description" xml:space="preserve">
         <source>Deprecated and integrated into The Pizza Helper.</source>
         <target state="translated">Không sử dụng nữa và đã được tích hợp vào The Pizza Helper.</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.backupYourData.detail" xml:space="preserve">
+        <source>FOSS never means eternal availability / reliability. Be responsible to your data by proactively exporting your gacha records as UIGF files for backup.</source>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.backupYourData.title" xml:space="preserve">
+        <source>Backup Proactively</source>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.contactDevs.detail" xml:space="preserve">
+        <source>You may refer to “Settings -&gt; About” to know how to contact the devs for possible help.</source>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.contactDevs.title" xml:space="preserve">
+        <source>Contact Us</source>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.menuButton.detail" xml:space="preserve">
+        <source>It situates at top-trailing corner of the UI when it’s available. Tap it to call the feature menu.</source>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.menuButton.title" xml:space="preserve">
+        <source>Menu Icon</source>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.notification.detail" xml:space="preserve">
+        <source>Get noticed when your in-game player stamina is full. This is configurable through in-app settings.</source>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.notification.title" xml:space="preserve">
+        <source>Notifications</source>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.widget.detail:%@" xml:space="preserve">
+        <source>This app supports Dynamic Island, Live Activities, and multiple kinds of widgets. Please tap [here](%@) to read Apple official articles to learn how to use widgets.</source>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.widget.title" xml:space="preserve">
+        <source>Widgets</source>
         <note/>
       </trans-unit>
     </body>
